# xfsdump

./: .gitignore  Makefile  VERSION  aclocal.m4  configure.ac  configure.in  release.sh
common/: Makefile  arch_xlate.c  arch_xlate.h  attr.c  attr.h  cldmgr.c  cldmgr.h  cleanup.c  cleanup.h  content.h  content_common.c  content_common.h  content_inode.h  dlog.c  dlog.h  drive.c  drive.h  drive_minrmt.c  drive_scsitape.c  drive_simple.c  exit.h  fs.c  fs.h  getdents.c  getdents.h  global.c  global.h  hsmapi.c  hsmapi.h  inventory.c  inventory.h  lock.c  lock.h  main.c  media.c  media.h  media_rmvtape.h  mlog.c  mlog.h  namreg.c  (+18 more)
copy/: Makefile  locks.c  locks.h  xfs_copy.8  xfs_copy.c  xfs_copy.h
debian/: Makefile  changelog  control  rules  shlibs.local  watch
doc/: CHANGES  Makefile  PORTING  README.xfsdump  xfsdump.html  xfsdump_ts.txt
dump/: Makefile  content.c  getopt.h  hsmapi.c  hsmapi.h  inomap.c  inomap.h  var.c  var.h
estimate/: Makefile  xfs_estimate.c
fsr/: Makefile  xfs_fsr.c
include/: Makefile  builddefs.in  buildmacros  buildrules  config.h.in  dqblk_xfs.h  quotaio_xfs.h  swap.h
inventory/: Makefile  getopt.h  inv_api.c  inv_core.c  inv_files.c  inv_fstab.c  inv_idx.c  inv_mgr.c  inv_oref.c  inv_oref.h  inv_priv.h  inv_stobj.c  inventory.h  testmain.c
invutil/: Makefile  cmenu.c  cmenu.h  fstab.c  fstab.h  getopt.h  invidx.c  invidx.h  invutil.c  invutil.h  list.c  list.h  menu.c  screen.c  stobj.c  stobj.h
librmt/: Makefile  isrmt.c  rmtabort.c  rmtaccess.c  rmtclose.c  rmtcommand.c  rmtcreat.c  rmtdev.c  rmtfstat.c  rmtioctl.c  rmtisatty.c  rmtlib.h  rmtlseek.c  rmtmsg.c  rmtopen.c  rmtread.c  rmtstatus.c  rmtwrite.c
m4/: Makefile
man/: Makefile
man/man8/: Makefile  xfs_estimate.8  xfs_fsr.8  xfsdq.8  xfsdump.8  xfsinvutil.8  xfsrestore.8
po/: Makefile  de.po  pl.po  xfsdump.pot
quota/: Makefile  xfsdq.c  xfsrq.sh
restore/: Makefile  bag.c  bag.h  content.c  dirattr.c  dirattr.h  getopt.h  inomap.c  inomap.h  mmap.c  mmap.h  namreg.c  namreg.h  node.c  node.h  tree.c  tree.h  win.c  win.h
